# RouteHQ

./: .gitignore  README.md
backend/: .env.example  main.py  pyproject.toml
backend/app/: auth.py  database.py  deps.py  main.py  models.py  schemas.py  seed.py
backend/app/routers/: auth.py  dashboard.py  drivers.py  expenses.py  fuel.py  maintenance.py  reports.py  trips.py  vehicles.py
backend/tests/: conftest.py  test_auth.py  test_maintenance.py  test_registry.py  test_reports.py  test_trips.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/layout/: Navbar.jsx  Sidebar.jsx
frontend/src/components/shared/: DataTable.jsx  KpiCard.jsx  Modal.jsx  StatusBadge.jsx  Toast.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: Dashboard.jsx  Drivers.jsx  ForgotPassword.jsx  FuelExpenses.jsx  Login.jsx  Maintenance.jsx  Reports.jsx  ResetPassword.jsx  Settings.jsx  Signup.jsx  Trips.jsx  Vehicles.jsx
